# jupyterhub-k8s

./: .coderabbit.yaml  .gitignore  .terraform.lock.hcl  README.md  config.yaml  locals.tf  main.tf  providers.tf  variables.tf  versions.tf
.github/workflows/: build-image.yml  release.yml
docker/lab/: Dockerfile  README.md  build.sh  build_root.sh  docker-compose.yml  pyproject.toml  run.sh
docker/lab-minimum/: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml
