[project]
name = "lab-minimum"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kacky", email = "t_kaki@nextappli.com" }
]
dependencies = [
    "jupyterhub==4.1.4",
    "jupyterlab==4.1.5",
    "jupyter-resource-usage>=1.0.2",
    "jupyterlab-theme-toggler>=1.0.0",
    "jupyter-server-proxy>=4.1.2",
    "nodejs==0.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lab_minimum"]
