[project]
name = "lab"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kacky", email = "t_kaki@nextappli.com" }
]
dependencies = [
    "jupyterhub>=4.0.2",
    "jupyterlab>=4.1.4",
    "jupyter-resource-usage>=1.0.2",
    "jupyterlab-theme-toggler>=1.0.0",
    "jupyter-server-proxy>=4.1.2",
    "nodejs>=0.1.1",
    "opencv-python>=4.9.0.80",
    "ftfy>=6.1.3",
    "google-cloud-aiplatform>=1.43.0",
    "gradio>=4.21.0",
    "ninja>=1.11.1.1",
    "torchserve>=0.9.0",
    "torch-model-archiver>=0.9.0",
    "torch-workflow-archiver>=0.2.11",
    "diffusers>=0.27.0",
    "transformers>=4.38.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lab"]
